sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:10: error: not found: value pos
     pos +=1 
     ^NaiveBaseball:8: error: type mismatch;
 found   : Unit
 required: Int
  while (col != base){
  ^