sort.baseball.NaiveBaseball.scala.code
override def run() {
  val nbBases = getNombreBases()
}

def distance(base:Int, position:Int):Int={
  var dist = 0
  var col = getCouleurJoueur(base,position)
  while (col != base){
    dist += 1
   	pos +=1 
  }
  
}